[tool.poetry]
name = "ib110hw-testing"
version = "0.1.8"
description = "Package used for testing homework assignments in the IB110 course at FI MUNI."
authors = ["Martin Pilát <8pilatmartin8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.68.2"
exrex = "^0.11.0"
ib110hw = "^0.0.4"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.68.2"
exrex = "^0.11.0"
ib110hw = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
